force-app/main/default/objects/Usage_Staging_Table__c/Usage_Staging_Table__c.object-meta.xml
<CustomObject>
    <label>Usage Staging Table</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Usage Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Staging Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>