force-app/main/default/objects/Usage_Staging_Table__c/fields/qtc_BatchLog__c.field-meta.xml
<CustomField>
    <fullName>qtc_BatchLog__c</fullName>
    <description>Holds information for errors or invalid logs as a result of the UsageStagingTableBatch</description>
    <label>Batch Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>