force-app/main/default/objects/Usage_Staging_Table__c/fields/qtc_MasterCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>qtc_MasterCustomerNumber__c</fullName>
    <description>Master Customer Number</description>
    <label>Master Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>