force-app/main/default/objects/Usage_Staging_Table__c/fields/qtc_MatchingAttribute__c.field-meta.xml
<CustomField>
    <fullName>qtc_MatchingAttribute__c</fullName>
    <description>Matching Attribute</description>
    <label>Matching Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>