force-app/main/default/objects/Usage_Staging_Table__c/fields/qtc_MatchingId__c.field-meta.xml
<CustomField>
    <fullName>qtc_MatchingId__c</fullName>
    <description>Holds the Matching Id value to compare with the Usage Summary&apos;s Matching Id value</description>
    <label>Matching Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>