force-app/main/default/objects/Usage_Staging_Table__c/fields/qtc_SummaryEndDate__c.field-meta.xml
<CustomField>
    <fullName>qtc_SummaryEndDate__c</fullName>
    <description>Summary End Date</description>
    <label>Summary End Date</label>
    <type>Date</type>
</CustomField>