force-app/main/default/objects/Usage_Staging_Table__c/fields/qtc_SummaryStartDate__c.field-meta.xml
<CustomField>
    <fullName>qtc_SummaryStartDate__c</fullName>
    <description>Start Date Time</description>
    <label>Summary Start Date</label>
    <type>Date</type>
</CustomField>