force-app/main/default/objects/Usage_Staging_Table__c/fields/qtc_TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>qtc_TotalQuantity__c</fullName>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>