force-app/main/default/objects/Usage_Staging_Table__c/fields/qtc_UsageStagingProcessed__c.field-meta.xml
<CustomField>
    <fullName>qtc_UsageStagingProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to indicate if the Usage Staging Table has already been processed</description>
    <label>Usage Staging Processed</label>
    <type>Checkbox</type>
</CustomField>