force-app/main/default/objects/Usage_Staging_Table__c/fields/qtc_UsageSummaryId__c.field-meta.xml
<CustomField>
    <fullName>qtc_UsageSummaryId__c</fullName>
    <description>Holds the Usage Summary record Id it&apos;s associated to.</description>
    <label>Usage Summary Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>